<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:text="Select planet"
            android:textSize="24sp" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_mercury"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_mercury"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="mercury"
            android:text="Mercury" />

        <Button
            android:id="@+id/btn_venus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_venus"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="venus"
            android:text="Venus" />

        <Button
            android:id="@+id/btn_earth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_earth"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="earth"
            android:text="Earth" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_mars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_mars"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="mars"
            android:text="Mars" />

        <Button
            android:id="@+id/btn_jupiter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_jupiter"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="jupiter"
            android:text="jupiter" />

        <Button
            android:id="@+id/btn_saturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_saturn"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="saturn"
            android:text="Saturn" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_uranus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_uranus"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="uranus"
            android:text="Uranus" />

        <Button
            android:id="@+id/btn_neptune"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_neptune"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="neptune"
            android:text="Neptune" />

        <Button
            android:id="@+id/btn_pluto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_pluto"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="pluto"
            android:text="Pluto" />
    </TableRow>


</TableLayout>