...
                android:layout_gravity="center"
                android:text="New York City"
                android:textSize="18sp"
                android:padding="20sp"/>

            <CheckBox
                android:id="@+id/checkNYC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

...
                    android:layout_gravity="center"
                    android:text="Irradiated meat"
                    android:textSize="18sp"
                    android:padding="20sp"/>

                <CheckBox
                    android:id="@+id/checkMeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </LinearLayout>

...
